argo-workflows/overlays/prod/argo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
spec:
  template:
    spec:
      containers:
        - name: argo-server
          args: [ "server", "--auth-mode", "server", "--auth-mode", "client" ]
